# octabot-plugins

./: Cargo.toml  Changelog.md  Octafile.yml  README.md
.github/workflows/: build.yml
crates/exchange/: Cargo.toml
crates/exchange/src/: lib.rs
crates/gerrit/: Cargo.toml
crates/gerrit/src/: lib.rs
crates/teamcity/: Cargo.toml
crates/teamcity/src/: lib.rs
crates/zulip/: Cargo.toml
crates/zulip/src/: lib.rs
