[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Roman Efremenko <roman.efremenko@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OctaHive/octabot-plugins"
rust-version = "1.84"
homepage = "https://github.com/OctaHive/octabot-plugins#readme"
documentation = "https://github.com/OctaHive/octabot-plugins#readme"
readme = "README.md"

[workspace.dependencies]
octabot-rust-sdk = { version = "0.1.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
url = "2.5.4"
waki = "0.5.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
