[package]
name = "exchange"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38" }
chrono-tz = "0.10.0"
ntlmclient = "0.2.0"
once_cell = "1.20.2"
octabot-rust-sdk = { path = "../../../octabot-rust-sdk" }
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
url = "2.5.4"
waki = "0.5.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
