[package]
name = "exchange"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.39" }
chrono-tz = "0.10.1"
ntlmclient = "0.2.0"
once_cell = "1.20.2"
octabot-rust-sdk = { path = "../../../octabot-rust-sdk" }
regex = "1.11.1"
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
waki = { workspace = true }

[lib]
crate-type = ["cdylib"]
