[package]
name = "gerrit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
base64 = "0.22.1"
once_cell = "1.20.3"
octabot-rust-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strfmt = "0.2.4"
url = { workspace = true }
waki = { workspace = true }

[lib]
crate-type = ["cdylib"]
