[package]
name = "zulip"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
base64 = "0.22.1"
governor = "0.8.0"
once_cell = "1.20.3"
octabot-rust-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = "1.13.1"
waki = { workspace = true }

[lib]
crate-type = ["cdylib"]
